# XPlane-DisableVrTeleport

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: DisableVrTeleport.cpp
